package onosoft.domain.model;

public enum PaymentStatus {
    Unknown,
    Planned,
    Obligo,
    Due
}
