package onosoft.domain.model;

import lombok.Data;

@Data
public class Receipt {
}
