@startuml
enum PaymentType {
    Cash
    BankTransfer
    CreditCard
}

enum PaymentStatus {
    Planned
    Obligo
    Due
    Paid
}

class MonetaryValue {
    amount
    currency
}

class Expense {
    dateAccrued
    purpose
    remarks
}

class Account {
    accountNo
    name
    description
}

class Receipt

class User {
    userName
}

User "1" o-> "*" Account : owns
Account "1" --> "*" Expense : accrues
Expense "*"--> "1" Receipt: attested-by
Expense *--> "1" PaymentType
Expense *--> "1" MonetaryValue
Expense *--> "1" PaymentStatus
@enduml